[gd_scene load_steps=5 format=2]

[ext_resource path="res://units/crab/model_data/crab_skin.tscn" type="PackedScene" id=1]
[ext_resource path="res://units/crab/crab.gd" type="Script" id=2]
[ext_resource path="res://weapons/water_gun/water_gun.tscn" type="PackedScene" id=3]

[sub_resource type="SphereShape" id=1]
margin = 0.01
radius = 0.32

[node name="Crab" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CrabSkin" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.035 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.145, 0 )
shape = SubResource( 1 )

[node name="GunSlot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12309, 0 )

[node name="WaterGun" parent="GunSlot" instance=ExtResource( 3 )]
